Applications/Unpoller/base/resources/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: unpoller
  labels:
    reloader.stakater.com/reload: disabled
