Applications/Unpoller/base/resources/network-policy-alloy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: alloy-unifi-traffic
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/component: collector
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/component: application
      ports:
        - protocol: TCP
          port: 1515
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring-agent
          podSelector:
            matchLabels:
              app.kubernetes.io/component: alloy
      ports:
        - protocol: TCP
          port: 12345
    - from:
        - ipBlock:
            cidr: 192.0.2.10/32
        - ipBlock:
            cidr: 192.0.2.20/32
      ports:
        - protocol: UDP
          port: 1514
        - protocol: TCP
          port: 1514
  egress:
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/component: application
      ports:
        - protocol: TCP
          port: 9130
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring-metrics
          podSelector:
            matchLabels:
              app.kubernetes.io/component: auth
      ports:
        - protocol: TCP
          port: 8427
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring-logs
          podSelector:
            matchLabels:
              app.kubernetes.io/component: auth
      ports:
        - protocol: TCP
          port: 8427
