Applications/Unpoller/base/resources/network-policy-unpoller.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: unpoller-traffic
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/component: application
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/component: collector
      ports:
        - protocol: TCP
          port: 9130
  egress:
    - to:
        - ipBlock:
            cidr: 192.0.2.10/32
        - ipBlock:
            cidr: 192.0.2.20/32
      ports:
        - protocol: TCP
          port: 443
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/component: collector
      ports:
        - protocol: TCP
          port: 1515
